# bugninja-platform

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  test.py
.cursor/rules/: dark-mode.mdc  impersonation-system-prompt.mdc  localization.mdc  nextjs.mdc  python.mdc  react.mdc  tailwind.mdc  terminal-commands.mdc  typescript.mdc
backend/: alembic.ini  entrypoint.sh  mypy.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3dc4b2ec98b8_initial_migration.py  cad0ebf74a67_initial_migration.py  e012903566e2_add_test_case_adjustments.py  f3a8b9c7d2e1_update_run_state_enum.py
backend/app/: config.py  logger.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: browser_config.py  browser_type.py  document.py  file_upload.py  health.py  project.py  secret_value.py  test_case.py  test_run.py  test_traversal.py  utils.py
backend/app/db/: README.md  __init__.py  action.py  base.py  brain_state.py  browser_config.py  cost.py  document.py  history_element.py  member.py  organization.py  project.py  secret_value.py  secret_value_test_case.py  secret_value_test_traversal.py  test_case.py  test_case_browser_config.py  test_run.py  test_traversal.py
backend/app/interface/: bugninja_db_write_publisher.py  bugninja_interface.py  main.py
backend/app/repo/: __init__.py  action_repo.py  brain_state_repo.py  browser_config_repo.py  cost_repo.py  document_repo.py  history_element_repo.py  project_repo.py  secret_value_repo.py  test_case_repo.py  test_run_repo.py  test_traversal_repo.py
backend/app/schemas/communication/: __init__.py  project.py  test_case.py  test_run.py  test_traversal.py
backend/app/schemas/crud/: action.py  base.py  brain_state.py  browser_config.py  constants.py  cost.py  document.py  history_element.py  member.py  organization.py  project.py  secret_value.py  test_case.py  test_run.py  test_traversal.py  utils.py
backend/dev/: delete_all_data.py  upload_fake_data.py  upload_mock_data.py  upload_realistic_data.py
backend/tests/: traversal_creation_endpoint.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/app/layout/: Layout.tsx
frontend/src/app/providers/: ProjectContext.tsx  index.ts
frontend/src/app/routing/: index.ts
frontend/src/components/: ConfirmationModal.tsx  CustomDropdown.tsx  DeleteConfirmationModal.tsx  Layout.tsx  ProjectCreationModal.tsx  ScreenshotModal.tsx
frontend/src/data/: mockData.ts
frontend/src/features/create-test/: CreateTestPage.tsx  index.ts
frontend/src/features/create-test/components/: BasicInformationSection.tsx  BrowserConfigurationsSection.tsx  ExtraRulesSection.tsx  FileUploadSection.tsx  MethodSelection.tsx  NoProjectWarning.tsx  SecretsSection.tsx  SuccessModal.tsx  TestConfigurationSection.tsx
frontend/src/features/create-test/hooks/: useCreateTest.ts  useCreateTestReducer.ts
frontend/src/features/create-test/services/: fileUploadService.ts
frontend/src/features/projects/components/: index.ts
frontend/src/features/projects/hooks/: index.ts
frontend/src/features/projects/services/: projectService.ts
frontend/src/features/projects/types/: index.ts
frontend/src/features/projects/utils/: index.ts
frontend/src/features/settings/: SettingsPage.tsx
frontend/src/features/settings/components/: BrowserConfigsSection.tsx  ProjectDeleteModal.tsx  ProjectSettingsSection.tsx  SecretValuesSection.tsx  SettingsNavigation.tsx  ViewPreferencesSection.tsx  index.ts
frontend/src/features/settings/services/: browserService.ts  index.ts  settingsService.ts
frontend/src/features/settings/types/: index.ts
frontend/src/features/test-cases/: CreateTestPage.tsx  TestCaseDetailPage.tsx  TestCasesPage.tsx
frontend/src/features/test-cases/components/: BrowserConfigurationSection.tsx  DeleteConfirmationModal.tsx  DeleteTestCaseSection.tsx  ExecutionSummary.tsx  ExtraRulesSection.tsx  RecentTestRuns.tsx  RunTestModal.tsx  SecretsSection.tsx  TestCaseBasicInfo.tsx  TestCaseConfiguration.tsx  TestCaseFilters.tsx  TestCaseGoal.tsx  TestCaseHeader.tsx  TestCaseListItem.tsx  TestCaseTableView.tsx  index.ts
frontend/src/features/test-cases/hooks/: index.ts  useTestCaseActions.ts  useTestCaseDelete.ts  useTestCaseDetail.ts  useTestCaseDetailRefactored.ts  useTestCaseSecrets.ts  useTestCases.ts
frontend/src/features/test-cases/services/: index.ts  testCaseService.ts
frontend/src/features/test-cases/types/: index.ts
frontend/src/features/test-run-detail/: TestRunDetailPage.tsx
frontend/src/features/test-run-detail/components/: ActionStep.tsx  BrowserConfiguration.tsx  ErrorSection.tsx  RunInformation.tsx  TestExecutionSteps.tsx  TestGoalSection.tsx  TestRunGif.tsx  TestRunHeader.tsx  TestRunUtils.tsx  index.ts
frontend/src/features/test-run-detail/hooks/: index.ts  useTestRunDetail.ts
frontend/src/features/test-runs/: TestRunsPage.tsx
frontend/src/features/test-runs/components/: TestRunFilters.tsx  TestRunListItem.tsx  TestRunStats.tsx  TestRunTableView.tsx  index.ts
frontend/src/hooks/: useProjects.ts  useTestCases.ts  useTestRuns.ts
frontend/src/pages/: CreateTest.tsx  Settings.tsx  TestCaseDetail.tsx  TestCases.tsx  TestHistory.tsx  TestRunDetail.tsx  TestRuns.tsx
frontend/src/services/: api.ts  browserService.ts  projectService.ts  settingsService.ts  testCaseService.ts
frontend/src/shared/components/: ConfirmationModal.tsx  CustomDropdown.tsx  DeleteConfirmationModal.tsx  EditableSection.tsx  ErrorBoundary.tsx  ErrorFallback.tsx  NavigationSidebar.tsx  Pagination.tsx  PriorityBadge.tsx  ScreenshotModal.tsx  StarRequestModal.tsx  StatsCard.tsx  StatusBadge.tsx  ViewPreferenceModal.tsx  ViewSwitcher.tsx  index.ts
frontend/src/shared/hooks/: useAsyncOperation.ts  useDropdowns.ts  useProjects.ts
frontend/src/shared/services/: api.ts  index.ts
frontend/src/shared/types/: index.ts
frontend/src/types/: index.ts
infrastructure/docker/: backend.Dockerfile  redis.conf
(+3 files in other folders)
